# javawasm-talk

./: README.md  pom.xml
demos/chicory-demo/: pom.xml
demos/chicory-demo/src/main/java/demo/: ChicoryAddDemo.java  ChicoryHostFunctionDemo.java  ChicoryProxyPoC.java
demos/chicory-demo/src/main/resources/wasm/: count_vowels.rs.wasm
demos/chicory-demo/wasm/add/rust/: Cargo.toml  add.rs  add.wasm  add.wat  readme.md
demos/chicory-demo/wasm/log/: logger.wasm  logger.wat
demos/chicory-doom-jbang/: readme.md
demos/extism-demo/: pom.xml  readme.md
demos/extism-demo/src/main/java/demo/: ExtismGoVowels.java  ExtismRustSum.java
demos/extism-demo/wasm/add/rust/: Cargo.toml  add.rs  add.wasm  readme.md
demos/extism-demo/wasm/vowels/go/: build.sh  go.mod  go.sum  main.go  readme.md  vowels.wasm
demos/wabt/: readme.md
demos/wasmtime-demo/: pom.xml  readme.md
demos/wasmtime-demo/src/main/java/demo/: JavaWasmtimeSumDemo.java  WasmIO.java
demos/wasmtime-demo/src/main/resources/: sum.wat
