[package]
name    = "add"
version = "0.1.0"
authors = ["thomas.darimont@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "add.rs"

[profile.release]
opt-level = 0
lto = "off"
codegen-units = 1

[dependencies]
extism-pdk = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"